force-app/main/default/objects/Answer__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>점검방법</description>
    <label>Answer</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>