force-app/main/default/objects/Answer__c/fields/AnswerType__c.field-meta.xml
<CustomField>
    <fullName>AnswerType__c</fullName>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>주관식</fullName>
            </value>
            <value>
                <fullName>다중선택</fullName>
            </value>
            <value>
                <fullName>손해배상</fullName>
            </value>
            <value>
                <fullName>법적리스크</fullName>
            </value>
            <value>
                <fullName>객관식</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>