force-app/main/default/objects/Answer__c/fields/BOQuestion__c.field-meta.xml
<CustomField>
    <fullName>BOQuestion__c</fullName>
    <label>BO Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipName>BO_Answer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>