force-app/main/default/objects/Answer__c/fields/DealBreak__c.field-meta.xml
<CustomField>
    <fullName>DealBreak__c</fullName>
    <description>사업미참여 조건 충족 여부</description>
    <formula>IF ( BOQuestion__r.IsKeyQuestion__c &amp;&amp; IsChecked__c , 
BOQuestion__r.DealBreakScore__c &gt;= Score__c,
false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Break</label>
    <type>Checkbox</type>
</CustomField>