force-app/main/default/objects/Answer__c/fields/EvaluationDepartmentEvaluationBasis__c.field-meta.xml
<CustomField>
    <fullName>EvaluationDepartmentEvaluationBasis__c</fullName>
    <label>Evaluation Department Evaluation Basis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>