force-app/main/default/objects/Answer__c/fields/IsChecked__c.field-meta.xml
<CustomField>
    <fullName>IsChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>답변 선택</description>
    <label>Answer Check</label>
    <type>Checkbox</type>
</CustomField>