force-app/main/default/objects/Answer__c/fields/IsPMChecked__c.field-meta.xml
<CustomField>
    <fullName>IsPMChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PM Check</label>
    <type>Checkbox</type>
</CustomField>