force-app/main/default/objects/Answer__c/fields/ProposalPMEvaluationBasis__c.field-meta.xml
<CustomField>
    <fullName>ProposalPMEvaluationBasis__c</fullName>
    <label>Proposal PM Evaluation Basis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>