force-app/main/default/objects/Answer__c/fields/ShortAnswer__c.field-meta.xml
<CustomField>
    <fullName>ShortAnswer__c</fullName>
    <label>Short Answer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>