force-app/main/default/objects/Answer__c/fields/ShortAnswerPM__c.field-meta.xml
<CustomField>
    <fullName>ShortAnswerPM__c</fullName>
    <label>Short Answer PM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>